service-mini-go.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-go-svc
spec:
  selector:
    app: app-go
  ports:
    - protocol: TCP
      port: 8878
      targetPort: 9747
  type: NodePort
