ingress-mini-go.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
   name: ingress-app-go
   annotations:
     kubernetes.io/ingress.class: "nginx"
     nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
   rules:
   - host: app.go.com
     http:
       paths:
       - path: /fruta
         pathType: Exact
         backend:
           service:
             name: app-go-svc
             port:
               number: 9747
